[gd_scene load_steps=6 format=3 uid="uid://cxv0odvwhywh5"]

[ext_resource type="Script" path="res://Scripts/Config.gd" id="1_721lp"]

[sub_resource type="Theme" id="Theme_hwbdr"]
Button/colors/font_color = Color(0.231373, 0.807843, 0.996078, 1)
Button/font_sizes/font_size = 20

[sub_resource type="Theme" id="Theme_ymwfo"]
Button/colors/font_color = Color(0, 0.886275, 0.411765, 1)
Button/font_sizes/font_size = 21

[sub_resource type="Theme" id="Theme_cnyra"]
Button/colors/font_color = Color(0.94902, 0.898039, 0, 1)
Button/font_sizes/font_size = 20

[sub_resource type="Theme" id="Theme_umngq"]
Button/colors/font_color = Color(1, 0.231373, 0.278431, 1)
Button/font_sizes/font_size = 18

[node name="Config" type="CanvasLayer"]
script = ExtResource("1_721lp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.356863, 0.356863, 0.356863, 0.756863)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -78.0
offset_right = 72.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hwbdr")
text = "Back To Menu"

[node name="Config" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ymwfo")
text = "Open Config"

[node name="Reload" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_cnyra")
text = "Reload Config"

[node name="Delete" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_umngq")
text = "Delete Config"

[node name="Delete" type="NativeConfirmationDialog" parent="VBoxContainer/Delete"]
title = "Are you sure?"
dialog_text = "Do you want to delete the config file?"
dialog_icon = 1

[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="VBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="VBoxContainer/Delete/Delete" to="." method="_on_delete_confirmed"]
